--- a/service/service_vod/src/main/resources/application.properties
+++ b/service/service_vod/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.application.name=service-vod
 spring.profiles.active=dev
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 spring.cloud.nacos.discovery.enabled=true
-aliyun.vod.file.keyid=LTAI4GCnvkuz3KhPD9djkYS4
-aliyun.vod.file.keysecret=HnjJjtpysSXtIFZZ14DFS7gNXOwVqj
+aliyun.vod.file.keyid=
+aliyun.vod.file.keysecret=
 
 spring.servlet.multipart.max-file-size=1024MB
 spring.servlet.multipart.max-request-size=1024MB
